first tut is done

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,30 @@
 \documentclass[11pt]{article}
 
 \begin{document}
-Hello!, This is my \LaTeX\ Document
+Hello!, This is my \LaTeX\ Document.
+% hard return to create a new line( blank line between two sentence
+
+A Rectangle
+
+A rectangle has side lengths of (x+1) and (x+3).
+
+%soft return to create a new line > \\
+%Hello everyone,\\
+%Good day to you
+
+
+% mathematical notation
+A rectangle has side lengths of $(x+1)$ and $(x+3)$.
+The equation ${A(x)=x^2+4x+3}$ gives the area of the rectangle.
+
+%math mode
+% 1. display mode
+% 2. inline mode
+
+%% 1. display mode - start and end with $$
+%% example below
+A rectangle has side lengths of $(x+1)$ and $(x+3)$.
+The equation $${A(x)=x^2+4x+3}$$ gives the area of the rectangle.
+
+
 \end{document}
