--- a/day#04.tex
+++ b/day#04.tex
@@ -58,8 +58,46 @@ math
 \item math	
 \end{enumerate}
 
+\vspace{1cm}
 
+\begin{enumerate} \setcounter{enumi}{6}
+\item biology
+\item chemistry
+\item math	
+\end{enumerate}
 
+\pagebreak
+
+\begin{itemize}
+\item biology
+\item chemistry
+\item math
+	\begin{itemize}
+	\item math A
+	\item math B
+		\begin{itemize}
+		\item class test
+		\item quizzes
+		\end{itemize}
+	\end{itemize}
+\item physics	
+\end{itemize}
+
+\vspace{1cm}
+
+\begin{enumerate}
+\item[] biology
+\item[] chemistry
+\item[] math	
+\end{enumerate}
+
+\vspace{1cm}
+
+\begin{enumerate}
+\item[a)] biology
+\item[b)] chemistry
+\item[c)] math	
+\end{enumerate}
 
 
 
